// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test PDCInfrastructureSpec snapshot should render edit view for inputset view 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="specifyHostsRadioGroup"
      >
        <label
          class="bp3-control bp3-radio"
        >
          <input
            name="Blueprint3.RadioGroup-5"
            type="radio"
            value="false"
          />
          <span
            class="bp3-control-indicator"
          />
          cd.steps.pdcStep.specifyHostsOption
        </label>
        <label
          class="bp3-control bp3-radio"
        >
          <input
            checked=""
            name="Blueprint3.RadioGroup-5"
            type="radio"
            value="true"
          />
          <span
            class="bp3-control-indicator"
          />
          cd.steps.pdcStep.preconfiguredHostsOption
        </label>
      </div>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-large"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pdcInfra_connectorRef"
                    >
                      connector
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-connectorRef"
                      style="width: 366px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target Text--targetClass"
                            >
                              <p
                                class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                tabindex="0"
                              >
                                connectorRef
                              </p>
                            </span>
                          </span>
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal"
                                id="tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main hostSpecificContainer"
                >
                  <div
                    class="specifyHostsRadioGroup"
                  >
                    <label
                      class="bp3-control bp3-radio"
                    >
                      <input
                        checked=""
                        name="Blueprint3.RadioGroup-6"
                        type="radio"
                        value="allHosts"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      cd.steps.pdcStep.deployAllHostsOption
                    </label>
                    <label
                      class="bp3-control bp3-radio"
                    >
                      <input
                        name="Blueprint3.RadioGroup-6"
                        type="radio"
                        value="specificHosts"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      cd.steps.pdcStep.deploySpecificHostsOption
                    </label>
                  </div>
                  <div
                    class="bp3-popover-wrapper hostSelect Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group bp3-disabled"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          disabled=""
                          placeholder="- Select -"
                          style="padding-right: 0px;"
                          type="text"
                          value="cd.steps.pdcStep.hostNameOption"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                />
              </div>
              <div
                class="inputWidth"
              >
                <div
                  class="bp3-form-group"
                  data-id="null-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-label"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="pdcInfra_sshKey"
                      >
                        cd.steps.common.specifyCredentials
                      </span>
                    </label>
                    <div
                      class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                    >
                      <a
                        class="containerLink"
                        data-testid="sshKey"
                        href="/"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                        >
                          <div>
                            createOrSelectSecret
                          </div>
                        </p>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inputWidth"
              >
                <div
                  class="bp3-form-group"
                  data-id="delegateSelectors-2"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="StyledProps--font StyledProps--main fieldSelectorContainer"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="delegateSelectors-3"
                        style="flex-grow: 1; margin-bottom: 0px;"
                      >
                        <label
                          class="bp3-label"
                          for="delegateSelectors"
                        >
                          <div
                            class="formLabel"
                          >
                            <span
                              class="Tooltip--acenter"
                              data-tooltip-id="pdcInfra_delegateSelectors"
                            >
                              common.defineDelegateSelector
                            </span>
                            <div
                              class="bp3-popover-wrapper typeSelectorWrapper"
                            >
                              <div
                                class="bp3-popover-target typeSelector"
                              >
                                <button
                                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                  type="button"
                                >
                                  <span
                                    class="bp3-button-text"
                                  >
                                    <span
                                      class="bp3-icon StyledProps--main icon fixed"
                                      data-icon="fixed-input"
                                    >
                                      <svg
                                        height="12"
                                        viewBox="0 0 9 9"
                                        width="12"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="wrapper wrapper"
                            data-name="DelegateSelectors"
                          >
                            <div
                              class="loader"
                            >
                              <span
                                class="bp3-icon StyledProps--main StyledProps--margin-medium StyledProps--color StyledProps--color-primary8"
                                data-icon="spinner"
                              >
                                <svg
                                  fill="none"
                                  height="15"
                                  viewBox="0 0 36 36"
                                  width="15"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                                    stroke="currentColor"
                                    stroke-dasharray="75,100"
                                    stroke-linecap="round"
                                    stroke-width="2.8"
                                    style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                                  />
                                </svg>
                              </span>
                              <span>
                                loading
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                  style="width: 140px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Preview Hosts
                  </span>
                </button>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main lastRow"
              style="align-items: center;"
            >
              <div
                class="bp3-form-group"
                data-id="allowSimultaneousDeployments-4"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox simultaneousDeployment StyledProps--main StyledProps--inline"
                  >
                    <input
                      name="allowSimultaneousDeployments"
                      type="checkbox"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    <span
                      class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                      data-tooltip-id="pdcInfraAllowSimultaneousDeployments"
                    >
                      cd.allowSimultaneousDeployments
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test PDCInfrastructureSpec snapshot should render edit view with empty initial values 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  >
    <div
      class="specifyHostsRadioGroup"
    >
      <label
        class="bp3-control bp3-radio"
      >
        <input
          checked=""
          name="Blueprint3.RadioGroup-0"
          type="radio"
          value="false"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.specifyHostsOption
      </label>
      <label
        class="bp3-control bp3-radio"
      >
        <input
          name="Blueprint3.RadioGroup-0"
          type="radio"
          value="true"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.preconfiguredHostsOption
      </label>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-large"
          >
            <div
              class="bp3-form-group hostsTextArea inputWidth"
              data-id="hosts-0"
            >
              <label
                class="bp3-label"
                for="hosts"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="pdcHosts"
                >
                  Hosts
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <textarea
                  autocomplete="off"
                  class="bp3-input bp3-fill"
                  maxlength="1024"
                  name="hosts"
                />
              </div>
            </div>
            <div
              class="inputWidth"
            >
              <div
                class="bp3-form-group"
                data-id="null-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pdcInfra_sshKey"
                    >
                      cd.steps.common.specifyCredentials
                    </span>
                  </label>
                  <div
                    class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                  >
                    <a
                      class="containerLink"
                      data-testid="sshKey"
                      href="/"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="key-main"
                        style="height: 12px;"
                      >
                        <svg
                          height="24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            stroke="#1C1C28"
                            stroke-width="0.5"
                          >
                            <path
                              d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                            />
                            <path
                              d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                            />
                          </g>
                        </svg>
                      </span>
                      <p
                        class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                      >
                        <div>
                          createOrSelectSecret
                        </div>
                      </p>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inputWidth"
            >
              <div
                class="bp3-form-group"
                data-id="delegateSelectors-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--font StyledProps--main fieldSelectorContainer"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="delegateSelectors-3"
                      style="flex-grow: 1; margin-bottom: 0px;"
                    >
                      <label
                        class="bp3-label"
                        for="delegateSelectors"
                      >
                        <div
                          class="formLabel"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="pdcInfra_delegateSelectors"
                          >
                            common.defineDelegateSelector
                          </span>
                          <div
                            class="bp3-popover-wrapper typeSelectorWrapper"
                          >
                            <div
                              class="bp3-popover-target typeSelector"
                            >
                              <button
                                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main icon fixed"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="wrapper wrapper"
                          data-name="DelegateSelectors"
                        >
                          <div
                            class="loader"
                          >
                            <span
                              class="bp3-icon StyledProps--main StyledProps--margin-medium StyledProps--color StyledProps--color-primary8"
                              data-icon="spinner"
                            >
                              <svg
                                fill="none"
                                height="15"
                                viewBox="0 0 36 36"
                                width="15"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                                  stroke="currentColor"
                                  stroke-dasharray="75,100"
                                  stroke-linecap="round"
                                  stroke-width="2.8"
                                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                                />
                              </svg>
                            </span>
                            <span>
                              loading
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                style="width: 140px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Preview Hosts
                </span>
              </button>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main lastRow"
            style="align-items: center;"
          >
            <div
              class="bp3-form-group"
              data-id="allowSimultaneousDeployments-4"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox simultaneousDeployment StyledProps--main StyledProps--inline"
                >
                  <input
                    name="allowSimultaneousDeployments"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  <span
                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                    data-tooltip-id="pdcInfraAllowSimultaneousDeployments"
                  >
                    cd.allowSimultaneousDeployments
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test PDCInfrastructureSpec snapshot should render edit view with runtime values  1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  >
    <div
      class="specifyHostsRadioGroup"
    >
      <label
        class="bp3-control bp3-radio"
      >
        <input
          name="Blueprint3.RadioGroup-3"
          type="radio"
          value="false"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.specifyHostsOption
      </label>
      <label
        class="bp3-control bp3-radio"
      >
        <input
          checked=""
          name="Blueprint3.RadioGroup-3"
          type="radio"
          value="true"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.preconfiguredHostsOption
      </label>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-large"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="bp3-form-group"
                data-id="null-0"
              >
                <label
                  class="bp3-label"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="pdcInfra_connectorRef"
                  >
                    connector
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="cr-field-connectorRef"
                    style="width: 366px;"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <p
                          class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                        />
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal"
                              id="tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                project
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main hostSpecificContainer"
              >
                <div
                  class="specifyHostsRadioGroup"
                >
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="Blueprint3.RadioGroup-4"
                      type="radio"
                      value="allHosts"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    cd.steps.pdcStep.deployAllHostsOption
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="Blueprint3.RadioGroup-4"
                      type="radio"
                      value="specificHosts"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    cd.steps.pdcStep.deploySpecificHostsOption
                  </label>
                </div>
                <div
                  class="bp3-popover-wrapper hostSelect Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="cd.steps.pdcStep.hostNameOption"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              />
            </div>
            <div
              class="inputWidth"
            >
              <div
                class="bp3-form-group"
                data-id="null-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pdcInfra_sshKey"
                    >
                      cd.steps.common.specifyCredentials
                    </span>
                  </label>
                  <div
                    class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                  >
                    <a
                      class="containerLink"
                      data-testid="sshKey"
                      href="/"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="key-main"
                        style="height: 12px;"
                      >
                        <svg
                          height="24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            stroke="#1C1C28"
                            stroke-width="0.5"
                          >
                            <path
                              d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                            />
                            <path
                              d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                            />
                          </g>
                        </svg>
                      </span>
                      <p
                        class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                      >
                        <div>
                          createOrSelectSecret
                        </div>
                      </p>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inputWidth"
            >
              <div
                class="bp3-form-group"
                data-id="delegateSelectors-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--font StyledProps--main fieldSelectorContainer"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="delegateSelectors-3"
                      style="flex-grow: 1; margin-bottom: 0px;"
                    >
                      <label
                        class="bp3-label"
                        for="delegateSelectors"
                      >
                        <div
                          class="formLabel"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="pdcInfra_delegateSelectors"
                          >
                            common.defineDelegateSelector
                          </span>
                          <div
                            class="bp3-popover-wrapper typeSelectorWrapper"
                          >
                            <div
                              class="bp3-popover-target typeSelector"
                            >
                              <button
                                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main icon fixed"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="wrapper wrapper"
                          data-name="DelegateSelectors"
                        >
                          <div
                            class="loader"
                          >
                            <span
                              class="bp3-icon StyledProps--main StyledProps--margin-medium StyledProps--color StyledProps--color-primary8"
                              data-icon="spinner"
                            >
                              <svg
                                fill="none"
                                height="15"
                                viewBox="0 0 36 36"
                                width="15"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                                  stroke="currentColor"
                                  stroke-dasharray="75,100"
                                  stroke-linecap="round"
                                  stroke-width="2.8"
                                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                                />
                              </svg>
                            </span>
                            <span>
                              loading
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                style="width: 140px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Preview Hosts
                </span>
              </button>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main lastRow"
            style="align-items: center;"
          >
            <div
              class="bp3-form-group"
              data-id="allowSimultaneousDeployments-4"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox simultaneousDeployment StyledProps--main StyledProps--inline"
                >
                  <input
                    name="allowSimultaneousDeployments"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  <span
                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                    data-tooltip-id="pdcInfraAllowSimultaneousDeployments"
                  >
                    cd.allowSimultaneousDeployments
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test PDCInfrastructureSpec snapshot should render edit view with values  1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  >
    <div
      class="specifyHostsRadioGroup"
    >
      <label
        class="bp3-control bp3-radio"
      >
        <input
          name="Blueprint3.RadioGroup-1"
          type="radio"
          value="false"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.specifyHostsOption
      </label>
      <label
        class="bp3-control bp3-radio"
      >
        <input
          checked=""
          name="Blueprint3.RadioGroup-1"
          type="radio"
          value="true"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.preconfiguredHostsOption
      </label>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-large"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="bp3-form-group"
                data-id="null-0"
              >
                <label
                  class="bp3-label"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="pdcInfra_connectorRef"
                  >
                    connector
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="cr-field-connectorRef"
                    style="width: 366px;"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target Text--targetClass"
                          >
                            <p
                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                              tabindex="0"
                            >
                              connectorRef
                            </p>
                          </span>
                        </span>
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal"
                              id="tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                project
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main hostSpecificContainer"
              >
                <div
                  class="specifyHostsRadioGroup"
                >
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="Blueprint3.RadioGroup-2"
                      type="radio"
                      value="allHosts"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    cd.steps.pdcStep.deployAllHostsOption
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="Blueprint3.RadioGroup-2"
                      type="radio"
                      value="specificHosts"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    cd.steps.pdcStep.deploySpecificHostsOption
                  </label>
                </div>
                <div
                  class="bp3-popover-wrapper hostSelect Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="cd.steps.pdcStep.hostNameOption"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              />
            </div>
            <div
              class="inputWidth"
            >
              <div
                class="bp3-form-group"
                data-id="null-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pdcInfra_sshKey"
                    >
                      cd.steps.common.specifyCredentials
                    </span>
                  </label>
                  <div
                    class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                  >
                    <a
                      class="containerLink"
                      data-testid="sshKey"
                      href="/"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="key-main"
                        style="height: 12px;"
                      >
                        <svg
                          height="24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            stroke="#1C1C28"
                            stroke-width="0.5"
                          >
                            <path
                              d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                            />
                            <path
                              d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                            />
                          </g>
                        </svg>
                      </span>
                      <p
                        class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                      >
                        <div>
                          createOrSelectSecret
                        </div>
                      </p>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inputWidth"
            >
              <div
                class="bp3-form-group"
                data-id="delegateSelectors-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--font StyledProps--main fieldSelectorContainer"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="delegateSelectors-3"
                      style="flex-grow: 1; margin-bottom: 0px;"
                    >
                      <label
                        class="bp3-label"
                        for="delegateSelectors"
                      >
                        <div
                          class="formLabel"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="pdcInfra_delegateSelectors"
                          >
                            common.defineDelegateSelector
                          </span>
                          <div
                            class="bp3-popover-wrapper typeSelectorWrapper"
                          >
                            <div
                              class="bp3-popover-target typeSelector"
                            >
                              <button
                                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main icon fixed"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="wrapper wrapper"
                          data-name="DelegateSelectors"
                        >
                          <div
                            class="loader"
                          >
                            <span
                              class="bp3-icon StyledProps--main StyledProps--margin-medium StyledProps--color StyledProps--color-primary8"
                              data-icon="spinner"
                            >
                              <svg
                                fill="none"
                                height="15"
                                viewBox="0 0 36 36"
                                width="15"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                                  stroke="currentColor"
                                  stroke-dasharray="75,100"
                                  stroke-linecap="round"
                                  stroke-width="2.8"
                                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                                />
                              </svg>
                            </span>
                            <span>
                              loading
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                style="width: 140px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Preview Hosts
                </span>
              </button>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main lastRow"
            style="align-items: center;"
          >
            <div
              class="bp3-form-group"
              data-id="allowSimultaneousDeployments-4"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox simultaneousDeployment StyledProps--main StyledProps--inline"
                >
                  <input
                    name="allowSimultaneousDeployments"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  <span
                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                    data-tooltip-id="pdcInfraAllowSimultaneousDeployments"
                  >
                    cd.allowSimultaneousDeployments
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test PDCInfrastructureSpec snapshot should render variable view 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
  >
    <div
      class="specifyHostsRadioGroup"
    >
      <label
        class="bp3-control bp3-radio"
      >
        <input
          name="Blueprint3.RadioGroup-7"
          type="radio"
          value="false"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.specifyHostsOption
      </label>
      <label
        class="bp3-control bp3-radio"
      >
        <input
          checked=""
          name="Blueprint3.RadioGroup-7"
          type="radio"
          value="true"
        />
        <span
          class="bp3-control-indicator"
        />
        cd.steps.pdcStep.preconfiguredHostsOption
      </label>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main formRow StyledProps--margin-bottom-large"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="bp3-form-group"
                data-id="null-0"
              >
                <label
                  class="bp3-label"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="pdcInfra_connectorRef"
                  >
                    connector
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="cr-field-connectorRef"
                    style="width: 366px;"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target Text--targetClass"
                          >
                            <p
                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                              tabindex="0"
                            >
                              connectorRef
                            </p>
                          </span>
                        </span>
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal"
                              id="tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                project
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main hostSpecificContainer"
              >
                <div
                  class="specifyHostsRadioGroup"
                >
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="Blueprint3.RadioGroup-8"
                      type="radio"
                      value="allHosts"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    cd.steps.pdcStep.deployAllHostsOption
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="Blueprint3.RadioGroup-8"
                      type="radio"
                      value="specificHosts"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    cd.steps.pdcStep.deploySpecificHostsOption
                  </label>
                </div>
                <div
                  class="bp3-popover-wrapper hostSelect Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="cd.steps.pdcStep.hostNameOption"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              />
            </div>
            <div
              class="inputWidth"
            >
              <div
                class="bp3-form-group"
                data-id="null-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="pdcInfra_sshKey"
                    >
                      cd.steps.common.specifyCredentials
                    </span>
                  </label>
                  <div
                    class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                  >
                    <a
                      class="containerLink"
                      data-testid="sshKey"
                      href="/"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="key-main"
                        style="height: 12px;"
                      >
                        <svg
                          height="24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g
                            fill="none"
                            stroke="#1C1C28"
                            stroke-width="0.5"
                          >
                            <path
                              d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                            />
                            <path
                              d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                            />
                          </g>
                        </svg>
                      </span>
                      <p
                        class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                      >
                        <div>
                          createOrSelectSecret
                        </div>
                      </p>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inputWidth"
            >
              <div
                class="bp3-form-group"
                data-id="delegateSelectors-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="StyledProps--font StyledProps--main fieldSelectorContainer"
                  >
                    <div
                      class="bp3-form-group"
                      data-id="delegateSelectors-3"
                      style="flex-grow: 1; margin-bottom: 0px;"
                    >
                      <label
                        class="bp3-label"
                        for="delegateSelectors"
                      >
                        <div
                          class="formLabel"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="pdcInfra_delegateSelectors"
                          >
                            common.defineDelegateSelector
                          </span>
                          <div
                            class="bp3-popover-wrapper typeSelectorWrapper"
                          >
                            <div
                              class="bp3-popover-target typeSelector"
                            >
                              <button
                                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                type="button"
                              >
                                <span
                                  class="bp3-button-text"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main icon fixed"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="wrapper wrapper"
                          data-name="DelegateSelectors"
                        >
                          <div
                            class="loader"
                          >
                            <span
                              class="bp3-icon StyledProps--main StyledProps--margin-medium StyledProps--color StyledProps--color-primary8"
                              data-icon="spinner"
                            >
                              <svg
                                fill="none"
                                height="15"
                                viewBox="0 0 36 36"
                                width="15"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                                  stroke="currentColor"
                                  stroke-dasharray="75,100"
                                  stroke-linecap="round"
                                  stroke-width="2.8"
                                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                                />
                              </svg>
                            </span>
                            <span>
                              loading
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                style="width: 140px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Preview Hosts
                </span>
              </button>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main lastRow"
            style="align-items: center;"
          >
            <div
              class="bp3-form-group"
              data-id="allowSimultaneousDeployments-4"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox simultaneousDeployment StyledProps--main StyledProps--inline"
                >
                  <input
                    name="allowSimultaneousDeployments"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  <span
                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                    data-tooltip-id="pdcInfraAllowSimultaneousDeployments"
                  >
                    cd.allowSimultaneousDeployments
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
